--- a/sleep/Dockerfile
+++ b/sleep/Dockerfile
@@ -1,14 +1,20 @@
-FROM openjdk:11
+FROM openjdk:17-alpine
 
 WORKDIR /app
 
+RUN apk update && apk add --no-cache \
+    bash \
+    coreutils \
+    findutils \
+    build-base
+
 COPY build.gradle gradlew settings.gradle ./
 COPY gradle/ gradle/
+
+RUN chmod +x gradlew
 
 RUN ./gradlew wrapper
 
 COPY src/ src
 
-RUN ./gradlew build
-
-ENTRYPOINT ["java","-jar","build/libs/sleep-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "build/libs/sleep-0.0.1-SNAPSHOT.jar"]
