--- a/sleep/docker-compose.yml
+++ b/sleep/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "5432:5432"
 
   sleep_api:
-    build: ./sleep/.
+    build: ./sleep/
     volumes:
       - ./sleep/:/sleep/
     ports:
